Update tests and creating testUserUtil to use register instead of inser/delete